syntax = "proto3";

package ON.Fragments.CreatorDashboard.Subscribers;

import "Protos/ON/Fragments/CreatorDashboard/Subscribers/Mute.proto";
import "Protos/ON/Fragments/CreatorDashboard/Subscribers/Ban.proto";

service ManageInterface {
	rpc MuteSubscriber (MuteRequest) returns (MuteResponse) {}
	rpc UnmuteSubscriber (UnmuteRequest) returns (UnmuteResponse) {}
	rpc BanSubscriber (BanRequest) returns (BanResponse) {}
	rpc UnbanSubscriber (UnbanRequest) returns (UnbanResponse) {}
}

